--- a/assets/styles.css
+++ b/assets/styles.css
@@ -158,10 +158,32 @@
     background-size: cover;
 }
 
+#tech-skills {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 100px;
+    justify-items: center;
+    margin-top: 100px;
+}
+
+#tech-skills section p {
+    font-size: 45px;
+}
+
+.icon-mongodb {
+    font-size: 65px;
+}
+
 /* contact info */
 #contact-info {
     background-color: #cc2c44;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 1000'%3E%3Cg %3E%3Ccircle fill='%23cc2c44' cx='50' cy='0' r='50'/%3E%3Cg fill='%23cf3b43' %3E%3Ccircle cx='0' cy='50' r='50'/%3E%3Ccircle cx='100' cy='50' r='50'/%3E%3C/g%3E%3Ccircle fill='%23d24843' cx='50' cy='100' r='50'/%3E%3Cg fill='%23d55443' %3E%3Ccircle cx='0' cy='150' r='50'/%3E%3Ccircle cx='100' cy='150' r='50'/%3E%3C/g%3E%3Ccircle fill='%23d75f44' cx='50' cy='200' r='50'/%3E%3Cg fill='%23d96a46' %3E%3Ccircle cx='0' cy='250' r='50'/%3E%3Ccircle cx='100' cy='250' r='50'/%3E%3C/g%3E%3Ccircle fill='%23da7449' cx='50' cy='300' r='50'/%3E%3Cg fill='%23dc7e4d' %3E%3Ccircle cx='0' cy='350' r='50'/%3E%3Ccircle cx='100' cy='350' r='50'/%3E%3C/g%3E%3Ccircle fill='%23dd8851' cx='50' cy='400' r='50'/%3E%3Cg fill='%23de9156' %3E%3Ccircle cx='0' cy='450' r='50'/%3E%3Ccircle cx='100' cy='450' r='50'/%3E%3C/g%3E%3Ccircle fill='%23df9b5c' cx='50' cy='500' r='50'/%3E%3Cg fill='%23e0a463' %3E%3Ccircle cx='0' cy='550' r='50'/%3E%3Ccircle cx='100' cy='550' r='50'/%3E%3C/g%3E%3Ccircle fill='%23e1ad6b' cx='50' cy='600' r='50'/%3E%3Cg fill='%23e2b573' %3E%3Ccircle cx='0' cy='650' r='50'/%3E%3Ccircle cx='100' cy='650' r='50'/%3E%3C/g%3E%3Ccircle fill='%23e3be7c' cx='50' cy='700' r='50'/%3E%3Cg fill='%23e5c685' %3E%3Ccircle cx='0' cy='750' r='50'/%3E%3Ccircle cx='100' cy='750' r='50'/%3E%3C/g%3E%3Ccircle fill='%23e6ce8f' cx='50' cy='800' r='50'/%3E%3Cg fill='%23e7d79a' %3E%3Ccircle cx='0' cy='850' r='50'/%3E%3Ccircle cx='100' cy='850' r='50'/%3E%3C/g%3E%3Ccircle fill='%23e9dfa5' cx='50' cy='900' r='50'/%3E%3Cg fill='%23ebe6b0' %3E%3Ccircle cx='0' cy='950' r='50'/%3E%3Ccircle cx='100' cy='950' r='50'/%3E%3C/g%3E%3Ccircle fill='%23eeeebb' cx='50' cy='1000' r='50'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: contain;
+}
+
+#contact-info p {
+    font-size: 30px;
+    text-align: center;
+    margin: 50px;
 }
