finished skills section and made site responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,16 @@
 
 /* container grid */
 #container {
-    display: grid;
-    grid-template-columns: 250px 1fr;
+    margin-top: -32px;
 }
 
 /* navbar */
-.sidenav {
-    transform: translateX(0%) !important;
+.sidenav-trigger {
+    grid-column: 1 / 2;
 }
 
 #slide-out {
-    background-color: rgb(66, 134, 244);
+    background-color: #344955;
     width: 250px;
     grid-column: 1 / 2;
 }
@@ -24,7 +23,7 @@
 }
 
 #slide-out a:hover {
-    color: rgb(66, 134, 244);
+    color: #344955;
     background-color: white;
 }
 
@@ -47,8 +46,9 @@
 
 
 /* projects */
-.card {
-    width: 350px;
+#projects h2 {
+    font-weight: 300;
+    margin-left: 20px;
 }
 
 .card-image {
@@ -74,3 +74,43 @@
 .card-content i:hover {
     transform: scale(1.3);
 }
+
+
+#container {
+    padding-left: 250px;
+}
+
+/* skills */
+#skills {
+    /* height: 400px; */
+    padding: 30px;
+    background-color: rgb(249, 170, 51);
+    margin-top: 100px;
+}
+
+.skillLogos {
+    width: 80px;
+    height: 80px;
+}
+
+.techName {
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+  @media only screen and (max-width : 992px) {
+    #container {
+      padding-left: 0;
+    }
+  }
