--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,17 @@
     font-family: Roboto;
 }
 
+i.material-icons.small.nav {
+    font-size: 40px;
+    position: fixed;
+    top: 0;
+    color: rgb(249, 170, 51);
+    color: #344955;
+    margin-bottom: 80px;
+    /* width: 100%; */
+    z-index: 1;
+}
+
 /* container grid */
 #container {
     margin-top: -32px;
@@ -31,7 +42,7 @@
 /* intro */
 #intro {
     grid-column: 2 / -1;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.305), rgba(0, 0, 0, 0.305)), url("https://images.unsplash.com/photo-1532285023254-17336184c0e5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4ebb511226bfc3b88653a825ab18ac25&auto=format&fit=crop&w=1050&q=80");
+    background-image: linear-gradient(rgba(249, 170, 51, 0.15), rgba(249, 170, 51, 0.15)), url("https://images.unsplash.com/photo-1505238680356-667803448bb6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d39fe8df8ff9407562e2f89aec3c1318&auto=format&fit=crop&w=1050&q=80");
     background-size: cover;
     background-position: center bottom;
     height: 700px;
@@ -39,10 +50,14 @@
 
 #intro h1 {
     color: white;
-    font-weight: 300;
-    /* margin-top: 100px; */
+    font-family: Montserrat;
+    font-weight: 200;
     padding-top: 10px;
     text-align: center;
+}
+
+#intro h1:nth-child(1){
+    padding-top: 45px;
 }
 
 
@@ -96,6 +111,7 @@
 
 .techName {
     text-align: center;
+    margin-top: 25px;
 }
 
 /* contact */
