--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ i.material-icons.small.nav {
 /* intro */
 #intro {
     grid-column: 2 / -1;
-    background-image: linear-gradient(rgba(249, 170, 51, 0.15), rgba(249, 170, 51, 0.15)), url("https://images.unsplash.com/photo-1505238680356-667803448bb6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d39fe8df8ff9407562e2f89aec3c1318&auto=format&fit=crop&w=1050&q=80");
+    background-image: linear-gradient(rgba(249, 170, 51, 0.15), rgba(249, 170, 51, 0.15)), url("/assets/images/background.jpg");
     background-size: cover;
     background-position: center bottom;
     height: 700px;
@@ -126,6 +126,8 @@ i.material-icons.small.nav {
 #contact .card .card-content .row {
     margin: auto;
 }
+
+
 
   @media only screen and (max-width : 992px) {
     #container {
