--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,14 @@ i.material-icons.small.nav {
 
 
 /* projects */
+#projects {
+    /* text-align: center; */
+}
+
+#projects .row {
+    display: inline-block;
+}
+
 #projects h2, #skills h2, #contact h2 {
     font-weight: 300;
     margin-left: 20px;
