--- a/css/styles.css
+++ b/css/styles.css
@@ -16,17 +16,18 @@ i.material-icons.small.nav {
 /* container grid */
 #container {
     margin-top: -32px;
+    padding-left: 250px;
 }
 
 /* navbar */
 .sidenav-trigger {
-    grid-column: 1 / 2;
+    /* grid-column: 1 / 2; */
 }
 
 #slide-out {
     background-color: #344955;
     width: 250px;
-    grid-column: 1 / 2;
+    /* grid-column: 1 / 2; */
 }
 
 #slide-out a {
@@ -40,15 +41,13 @@ i.material-icons.small.nav {
 
 
 /* intro */
-#intro {
-    grid-column: 2 / -1;
-    background-image: linear-gradient(rgba(249, 170, 51, 0.15), rgba(249, 170, 51, 0.15)), url("/assets/images/background.jpg");
+#heading-intro {
     background-size: cover;
     background-position: center bottom;
     height: 700px;
 }
 
-#intro h1 {
+#heading-intro h1 {
     color: white;
     font-family: Montserrat;
     font-weight: 200;
@@ -56,14 +55,14 @@ i.material-icons.small.nav {
     text-align: center;
 }
 
-#intro h1:nth-child(1){
+#heading-intro h1:nth-child(1){
     padding-top: 45px;
 }
 
 
 /* projects */
-#projects {
-    /* text-align: center; */
+.projects {
+    background-image: linear-gradient(rgba(249, 170, 51, 0.15), rgba(249, 170, 51, 0.15)), url("/assets/images/background.jpg");
 }
 
 #projects .row {
@@ -99,14 +98,8 @@ i.material-icons.small.nav {
     transform: scale(1.3);
 }
 
-
-#container {
-    padding-left: 250px;
-}
-
 /* skills */
 #skills {
-    /* height: 400px; */
     padding: 30px;
     background-color: rgb(249, 170, 51);
     margin-top: 100px;
@@ -140,3 +133,8 @@ i.material-icons.small.nav {
       padding-left: 0;
     }
   }
+
+/* education */
+.education {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.274), rgba(0, 0, 0, 0.274)), url("/assets/images/education.jpeg");
+}
